@@ -2,7 +2,6 @@
 
  :deps {org.clojure/clojure {:mvn/version "1.10.1"}
         org.clojure/tools.reader {:mvn/version "1.3.4"}
-        doric/doric {:mvn/version "0.9.0"}
         metosin/malli {:mvn/version "0.2.1"}
         rewrite-clj/rewrite-clj  {:mvn/version "1.0.574-alpha"}
         borkdude/sci {:mvn/version "0.2.1-alpha.1"}}
