@@ -26,11 +26,6 @@
       <version>1.10.1</version>
     </dependency>
     <dependency>
-      <groupId>doric</groupId>
-      <artifactId>doric</artifactId>
-      <version>0.9.0</version>
-    </dependency>
-    <dependency>
       <groupId>rewrite-clj</groupId>
       <artifactId>rewrite-clj</artifactId>
       <version>1.0.574-alpha</version>
