@@ -11,7 +11,8 @@ For a list of breaking changes see link:#breaking[breaking-changes]
 
 == Unreleased
 
-* Don't trim trailing newline for test body if last item comment
+* Don't trim trailing newline for test body if last item is comment
+* Switch from (too) wide table to tree-like report of found blocks
 
 == v1.0.92-alpha
 
